unnecessary white space fixed

--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,12 @@
 .pages {
   background-color: rgb(238, 238, 238);
 }
+
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
